--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,12 @@ dependencies:
   dotted_border: ^2.0.0
   keyboard_actions: ^3.4.0
   google_sign_in: ^5.0.3
-  flutter_facebook_login: ^3.0.0
+  #flutter_facebook_login: ^3.0.0
+  flutter_login_facebook: ^1.1.0
   firebase_auth: ^1.2.0
   firebase_messaging: ^10.0.0
   image_picker: ^0.7.5+2
-  photo_view: ^0.11.1
+  photo_view: ^0.12.0
   random_string: ^2.1.0
   flex_color_picker: ^2.0.1
   timelines: ^0.1.0
